fixed grid layout issues

--- a/app/components/molecules/mediaBlock/MediaBlock.module.css
+++ b/app/components/molecules/mediaBlock/MediaBlock.module.css
@@ -1,8 +1,9 @@
 .mediaWrapper {
   position: relative;
-  width: 100%;
+  height: 100%;
+  width: auto;
   overflow: hidden;
-  display: flex;
+  /* border: 1px solid blue; */
 }
 
 .mediaImage {
